ingress/kibana-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-logging
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: kibana-logging.hvl.com
    http:
      paths:
      - backend:
          serviceName: kibana-logging
          servicePort: 5601
