ingress/kube-dash-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: kubernetes-dashboard.hvl.com
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
